# cppPractice

./: CMakeCache.txt  Makefile  README.md  cmake_install.cmake  davesVectors  davesVectors.workspace
DesignPatterns/Observer/Basic/: CMakeCache.txt  CMakeLists.txt  Makefile  Observer.hpp  cmake_install.cmake  observable.hpp  peopleObserver.cpp
DesignPatterns/Observer/QuestionSolution/: CMakeLists.txt  ratGame.cpp  ratgameTests.cpp
binaryGap/: CMakeCache.txt  CMakeLists.txt  Makefile  binaryGap.cpp  cmake_install.cmake
binaryGap/binaryGap/binaryGap.xcodeproj/: project.pbxproj
binaryGap/binaryGap/binaryGap.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
binaryGap/binaryGap/binaryGap.xcodeproj/project.xcworkspace/xcuserdata/davgilso.xcuserdatad/: UserInterfaceState.xcuserstate
codility/smallestNumberInVector/: solution.cpp
leetCode/maxProduct/: maxProduct.cpp
leetCode/maximumNumerofOnes/: maxOnes.cpp
leetCode/twoSum/: twoSum.cpp
missingInteger/: .gitignore  CMakeLists.txt  solution.cpp
modernCppChallenge/languageSpecifics/ipPrint/: CMakeLists.txt  ipv4.cpp
modernCppChallenge/maths/problem10GreyCode/: CMakeLists.txt  greyCode.cpp
modernCppChallenge/maths/problem2_gcd/: CMakeLists.txt
modernCppChallenge/maths/problem2_gcd/src/: gdc.cpp
modernCppChallenge/maths/problem3_lcm/: CMakeLists.txt
modernCppChallenge/maths/problem3_lcm/src/: lcm.cpp
modernCppChallenge/maths/problem4_lowestPrime/: CMakeLists.txt
modernCppChallenge/maths/problem4_lowestPrime/src/: lowestprime.cpp
modernCppChallenge/maths/problem5_sexyPrimes/: CMakeLists.txt  sexyPrimes.cpp
modernCppChallenge/maths/problem6_AbundantNumbers/: CMakeLists.txt  abundantNumbers.cpp
modernCppChallenge/maths/problem7_AmicableNumbers/: CMakeLists.txt  amicableNumbers.cpp
modernCppChallenge/maths/problem8_ArmstrongNumbers/: CMakeLists.txt  armstrong.cpp
modernCppChallenge/maths/problem9PrimeFactors/: CMakeLists.txt  primeFactors.cpp
modernCppChallenge/maths/problem_1/: .gitignore  CMakeLists.txt
modernCppChallenge/maths/problem_1/src/: prob1.cpp
myFirstDBus/: CMakeLists.txt
myFirstDBus/server/src/: basicServer.cpp
myFirstTemplate/: .gitignore  CMakeLists.txt
myFirstTemplate/src/: myFirstTemplate.cpp
smartPointers/: CMakeLists.txt
smartPointers/src/: main.cpp
vectors/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  davesVectors.project  davesVectors.workspace
vectors/src/: main.cpp
